<resources>
    <string name="app_name">Deus</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">Login</string>
    <string name="delete">delete</string>
    <string name="hello">Hello</string>
    <string name="admin">Admin</string>
    <string name="wake">Wake</string>
    <string name="hours_placeholder">14</string>
    <string name="minutes_placeholder">47</string>
    <string name="seconds_placeholder">09</string>
    <string name="hrs">Hrs</string>
    <string name="mins">Mins</string>
    <string name="secs">Secs</string>
    <string name="generate_key_text">Generate Key</string>
    <string name="sensor_icon_image_description">image view for the sensor Icon</string>
    <string name="prime_decoy">Prime Decoy</string>
    <string name="prime">Prime</string>
    <string name="create_cypher">Create Cypher</string>
    <string name="select_cypher">Select Cypher</string>
    <string name="prime_cypher">Prime Cypher</string>
    <string name="enter_prime_seed">Enter Prime Seed</string>
    <string name="enter_any_prime_as_seed">Enter any prime as seed</string>
    <string name="choose_a_cypher_for_random_sentence">Choose a cypher for random sentence</string>
    <string name="prime_seed">Prime Seed</string>
    <string name="caesar">Caesar</string>
    <string name="enter_value_n_for_caesar_cypher">Enter value N for caesar cypher</string>
    <string name="demonstration">Demonstration</string>
    <string name="sentence">Sentence:</string>
    <string name="example_random_sentence">Go to a river and fetch me a beast of no flesh</string>
    <string name="cyphered">Cyphered:</string>
    <string name="example_cyphered_text">2428219281938232083926</string>
    <string name="enter_key">Enter Key</string>
    <string name="the_river_is_in_the_other_river">The river is in the other river</string>
    <string name="enter_the_authentication_key">Enter the authentication key</string>
    <string name="turn">Turn</string>
    <string name="skip">Skip</string>
    <string name="_23s">23s</string>
    <string name="vigenere">Vigenere</string>
</resources>